syntax = "proto3";

package  com.test.grpc;

message Request {
  int64 startX = 1;
  int64 endX = 2;
  int64 startY = 3;
  int64 endY = 4;
  int64 startT = 5;
  int64 endT = 6;
}

message Response {
  int64 time = 1;
  int64 x = 2;
  int64 y = 3;
  double result = 4;
}

message ResponseArray{
  repeated Response responses = 1;
}

service Calculator {
  rpc calculate(Request) returns (stream ResponseArray);
}